# carol-app-monitor

./: .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  README.md  manifest.json  mkdocs.yml  pyproject.toml
.github/workflows/: lint_pipeline.yml  test_pipeline.yml
carol_app_monitor/: carol_api.py  exceptions.py  main.py  monitor.py  utils.py
docs/: index.md
docs/Totvs_Carol/: introduction.md
docs/api/: carol_api.md  monitor.md  utils.md
docs/carol/: index.md
docs/contribute/: github.md  index.md
docs/stylesheets/css/: extra.css
docs/templates/: cards.html  github.md  installation.md  totvs_carol.md
docs/tutorial/: 02_installation.md  build.md  conclusion.md  create.md  index.md  installation.md  schedule.md
tests/: conftest.py  test_carol_api.py  test_exceptions.py  test_main.py  test_monitor.py  test_utils.py
